# tobe-read-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: main.rs
