[package]
name = "tobe-read-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
tokio = {version = "1.21.2", features = ["macros", "rt-multi-thread"]}
regex = "1"
base64 = "0.21.5"
serde = "1.0"
serde_json = "1.0"
google-cloud-gax = "0.16.0"
google-cloud-googleapis = "0.11.1"
google-cloud-pubsub = "0.21.0"